[Release] Version 0.1.1 updates
This release includes the following changes:

- Update the version of ChromaDB to the version `4.13`.
- Re-generate the `poetry.lock` file.
- Update Python scripts to migrate ChromaDB from `3.21` to `4.13`
  (See https://docs.trychroma.com/migration).
- Updated README to clarify when to delete an existing vector database.
- Update the chatbot UI template to use "PaLM" to refer to the AI model.

--- a/demos/palm/python/docs-agent/chatbot/templates/chatui/result.html
+++ b/demos/palm/python/docs-agent/chatbot/templates/chatui/result.html
@@ -38,7 +38,7 @@
   <span id="rewrite-question-span">
     <p>{{ question | replace("+", " ") | replace("%3F", "?")}}</p>
   </span>
-  <h4 id="rewrite-response-header">Bard's response:</h4>
+  <h4 id="rewrite-response-header">PaLM's response:</h4>
   <span id="rewrite-original-response-span">
     {{ response_in_html | safe }}
   </span>
