[Release] Docs Agent version 0.1.6
What's changed:

- Add benchmark tests to provide ways to track the quality of embeddings,
  context chunks and responses generated by the AI model.
- Update the prompt condition to be more specific and follow
  best practices in prompting.
- Enable the chatbot server to provide a custom condition string to
  the DocsAgent class.
- Bug fix: Provide a custom condition when asking for 5 related
  questions to the PaLM model.
- Add a new config variable to specify the log level to be "VERBOSE"
- Improve the rendering of code text and code blocks on the chat app UI.
- Rephrase the sentence that describes the page, section, and subsection
  structure of Markdown pages in the `markdown_to_plain_text.py` script.
- Update the pre-processing diagram to fix a typo (`appscripts` to `apps_script`)

--- a/demos/palm/python/docs-agent/chatbot/static/css/style.css
+++ b/demos/palm/python/docs-agent/chatbot/static/css/style.css
@@ -67,6 +67,11 @@ li {
   margin: 0 0 0.3em;
 }
 
+code {
+    font-family: math;
+    color: darkgreen;
+}
+
 /* ======= Style layout by ID ======= */
 
 #callout-box {
